<resources>
    <string name="app_name">LauncherKamaz</string>
    <string name="am">AM</string>
    <string name="fm">FM</string>
    <string name="na">N/A</string>
    <string name="usb">USB 1</string>
    <string name="usb2">USB 2</string>
    <string name="sd">SD</string>
    <string name="internalStorage">Internal storage</string>
    <string name="aux">AUX</string>
    <string name="album">Album</string>
    <string name="photo">Photo</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="device">Device</string>
    <string name="internal_storage">Storage</string>
    <string name="file_path_not">Could not find file path</string>
    <string name="file_not">File not found</string>
    <string name="system_error">System error</string>
    <string name="switchOn">On</string>
    <string name="switchOff">Off</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="brightness">Brightness</string>
    <string name="contrast">Contrast</string>
    <string name="gallery">Gallery</string>
    <string name="st_phone">Phone</string>
    <string name="st_timedata">Date and time</string>
    <string name="st_screen">Screen</string>
    <string name="st_sound">Sound</string>
    <string name="st_memory">Memory</string>
    <string name="st_language">Language</string>
    <string name="main_navi">Navigation</string>
    <string name="main_radio">Radio</string>
    <string name="main_media">Media</string>
    <string name="main_help">help</string>
    <string name="main_menu">Menu</string>
    <string name="main_internet">Internet</string>
    <string name="main_phone">Phone</string>
    <string name="main_resent">Recent</string>
    <string name="main_contact">Contacts</string>
    <string name="main_diagnostic">Diagnostics</string>
    <string name="main_climatic">Climate</string>
    <string name="downloadFile">Loading</string>
    <string name="compositions">Compositions</string>
    <string name="compositionss">Compositions</string>
    <string name="genres">Genres</string>
    <string name="albums">Albums</string>
    <string name="performers">Performers</string>
    <string name="search">Search</string>
    <string name="radio_add_save">Save</string>
    <string name="devices">Devices</string>
    <string name="auxEnabled">AUX mode is on</string>
    <string name="notUsbDevice">USB device not found</string>
    <string name="notSdDevice">SD card not found</string>
    <string name="rus">Russian</string>
    <string name="eng">English</string>
    <string name="repeat_none">Normal mode</string>
    <string name="repeat_all_list">Repeat list</string>
    <string name="repeat_track">Repeat track</string>
    <string name="repeat_random">Random mode</string>
    <string name="repeat_random_off">Normal mode</string>
    <string name="update">Update</string>
    <string name="currentOsVersion">Current OS version:</string>
    <string name="currentMCUVersion">Current MCU version:</string>
    <string name="currentBTVersion">Current BT version:</string>
    <string name="currentUIVersion">Current UI version:</string>
    <string name="availableVersion">Available version:</string>
    <string name="currentMacAddress">MAC address WI-FI:</string>
    <string name="mrgsrKeyExistStatus">Key for voice recognizer system:</string>
    <string name="mrgsrKeyExistTrueStatus">Installed</string>
    <string name="mrgsrKeyExistFalseStatus">Not installed</string>
    <string name="delete">Delete</string>
    <string name="deleteImage">Delete picture</string>
    <string name="create">Create</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="rename">Rename</string>
    <string name="write_station_name">Enter the name of the radio station</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="operation_cancel">Operation canceled</string>
    <string name="radio_station_add_success">Radio station added</string>
    <string name="radio_auto">Auto</string>
    <string name="new_folder">New folder</string>
    <string name="write_folder_name">Enter the folder name</string>
    <string name="name_is_path">Folder name</string>
    <string name="device_name">Device name</string>
    <string name="folder_no_create">Folder not created</string>
    <string name="folder_is_already_exist">This folder already exists</string>
    <string name="cellular">Mobile phone</string>
    <string name="urban">City phone</string>
    <string name="phone_number">Phone number</string>
    <string name="write_phone_number">Enter a phone number</string>
    <string name="on_bluetooth">Bluetooth on</string>
    <string name="search_bluetooth">Device search</string>
    <string name="paired_bluetooth">Paired devices</string>
    <string name="bluetooth_not_on">Bluetooth is disabled</string>
    <string name="bluetooth_is_off">Bluetooth is disabled</string>
    <string name="please_turn_on_bluetooth">Please turn on \nW Power</string>
    <string name="copyng">Copying</string>
    <string name="moving">Moving</string>
    <string name="deleting">Delete</string>
    <string name="notConnect">No connection established</string>
    <string name="activeSpeak">Have an active conversation</string>
    <string name="notActiveSpeak">No active conversations</string>
    <string name="accessibility_service_description">Service</string>
    <string name="not_saves_radio_stations">There are no saved radio stations</string>
    <string name="wait_loading_media">Wait, the media list is loading!</string>
    <string name="unknown_number">Unknown number</string>
    <string name="callCancelled">Call completed</string>
    <string name="kamaz_prospect">Catalog</string>
    <string name="kamaz_usage">KAMAZ instruction manual</string>
    <string name="kamaz_service">Service center</string>
    <string name="kamaz_dealers">Dealers</string>
    <string name="kamaz_itis">ITIS Guide</string>
    <string name="incoming_call">Incoming\ncall</string>
    <string name="outgoing_call">Outgoing\ncall</string>
    <string name="connecting">Connecting ...</string>
    <string name="connResultSucess">Connected to the device</string>
    <string name="openFileDialog">Select an application to open the file.</string>
    <string name="installAppPermissions">Application installation is available only from the KAMAZ application store</string>
    <string name="reminder">Reminder</string>
    <string name="material_calendar_today_button">Today</string>
    <string name="material_calendar_positive_button">Done</string>
    <string name="material_calendar_negative_button">Back</string>
    <string name="scroll_hms_picker_hours_label">H</string>
    <string name="scroll_hms_picker_minutes_label">M</string>
    <string name="scroll_hms_picker_seconds_label">S</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="btn_notice_clear">Cleaning</string>
    <string name="notification_msg">Bon Voyage!</string>
    <string name="os">System</string>
    <string name="map">Map</string>
    <string name="mcu">MCU</string>
    <string name="mcu_a">MCU_A</string>
    <string name="mcu_d">MCU_D</string>
    <string name="update_os">System update</string>
    <string name="reboot_now">Reboot now</string>
    <string name="reboot_later">Restart later</string>
    <string name="reboot_prompt">Update complete, do I need to restart?</string>
    <string name="selectFirmware">Select firmware file</string>
    <string name="selectFirmwareType">Select the type of firmware</string>
    <string name="none_device">Missing</string>
    <string name="degree_point">°</string>
    <string name="climatic_timer">Timer</string>
    <string name="climatic_mode_action">OFF</string>
    <string name="climatic_mode_auto">AUTO</string>
    <string name="climatic_mode">A/C</string>
    <string name="autoHeating_mode">Auto reheat mode</string>
    <string name="settings_minus">-</string>
    <string name="settings_plus">+</string>
    <string name="wifiStateSearch">Search for WiFi networks...</string>
    <string name="datetime_date_text">Date</string>
    <string name="datetime_time_text">Time</string>
    <string name="datetime_time_format_text">24 hour format</string>
    <string name="datetime_time_zone_from_bis_text">Use network time zone</string>
    <string name="datetime_time_zone_text">Timezone</string>
    <string name="display_brightness">Brightness</string>
    <string name="display_night_brightness">Night brightness</string>
    <string name="soundClick">Click sound</string>
    <string name="voice_call">Ringtone</string>
    <string name="voice_notices">Notifications</string>
    <string name="voice_multimedia">Multimedia</string>
    <string name="media">Media</string>
    <string name="storage_in_device">Inner memory</string>
    <string name="storage_in_sd">SD card</string>
    <string name="storage_in_usb_first">USB slot 1</string>
    <string name="storage_in_usb_second">USB slot 2</string>
    <string name="eq">Equalizer</string>
    <string name="soundStage">Sound stage</string>
    <string name="reset">Reset</string>
    <string name="ultraBass">Ultra Bass</string>
    <string name="ultraBassCheck">Ultra Bass:</string>
    <string name="ultraBassLevel">Gain level</string>
    <string name="audioSystemResetSuccess">Factory audio settings restored</string>
    <string name="eq_normal">Normal</string>
    <string name="eq_pop">Pop</string>
    <string name="eq_rock">Rock</string>
    <string name="eq_jazz">Jazz</string>
    <string name="eq_classic">Classic</string>
    <string name="eq_custom">Custom</string>
    <string name="error">Error</string>
    <string name="notFilesForUpdate">No files for firmware</string>
    <string name="turnOnNfc">Turn on NFC module</string>
    <string name="notTurnOnNfc">NFC module was not enabled</string>
    <string name="youCanNotHeard">You can not be heard...</string>
    <string name="say">Speak ...</string>
    <string name="i_listen_you">I listen to you ...</string>
    <string name="recognize">Processing...</string>
    <string name="recognizeNotSuccess">Could not recognize</string>
    <string name="rgsrIniting">Module is initializing, wait!</string>
    <string name="heater">Heater</string>
    <string name="pzd">WH</string>
    <string name="temperatureHeatingCoolant">Coolant temperature</string>
    <string name="temperatureCabinAir">air temperature</string>
    <string name="workTimeHint">Working time</string>
    <string name="mode">Mode</string>
    <string name="addPzhdTimer">Add on timer</string>
    <string name="pzhd_timer_start">Delayed start timer</string>
    <string name="pzhd_timer_end">Delayed shutdown timer</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="mo">Mo</string>
    <string name="text_help">Помощь</string>
    <string name="text_decription">ОКАЗАНИЕ ПОМОЩИ ВОДИТЕЛЯМ АВТОТЕХНИКИ КАМАЗ</string>
    <string name="text_phone_sentence">(звонок по России бесплатный)</string>
    <string name="text_phone_number">8-800-555-00-99</string>
    <string name="text_sugg1">Эвакуация автотехники.</string>
    <string name="text_sugg2">Помощь в вопросах, на которые не смог ответить дилер.</string>
    <string name="text_sugg3">Оценка качества сервиса.</string>
    <string name="text_webSite">Сайт www.kamaz.ru</string>
</resources>